# pavlov-map-manager

./: .gitignore  .prettierignore  LICENSE  README.md  TODO.md  bun.lockb  components.json  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: build.yml  publish.yml
.svelte-kit/: ambient.d.ts  tsconfig.json
.svelte-kit/types/: route_meta_data.json
.svelte-kit/types/src/routes/: $types.d.ts
src/: app.html  app.pcss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: iconconverter.py
src-tauri/src/: main.rs
src/lib/: globals.svelte.ts  mod-utils.svelte.ts  modio-utils.svelte.ts  modio-utils.ts  mods.svelte.ts  pavlov-utils.ts  schemas.ts  stores.ts  tauri-updater.ts  types.ts  utils.ts
src/lib/Icons/: ModIoCog.svelte  index.ts
src/lib/components/: ServerListTable.svelte  index.ts  modcard.svelte
src/lib/components/Mods/: GridItem.svelte  ListItem.svelte  index.ts
src/lib/components/ui/accordion/: accordion-content.svelte  accordion-trigger.svelte
src/lib/components/ui/avatar/: avatar-fallback.svelte
src/lib/components/ui/button/: button.svelte  index.ts
src/lib/components/ui/card/: card-header.svelte
src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-label.svelte  dropdown-menu-radio-item.svelte  (+4 more)
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/routes/serverlist/: +page.svelte
src/routes/settings/: +page.svelte
(+4 files in other folders)
